--- a/style.css
+++ b/style.css
@@ -1,11 +1,33 @@
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
-
-
-* {
-    box-sizing: border-box;
+:root {
+  --primary-color: #007bff;
+  --secondary-color: #6c757d;
+  --success-color: #28a745;
+  --danger-color: #dc3545;
+  --warning-color: #ffc107;
+  --info-color: #17a2b8;
 }
 body {
-    font-family: "Poppins", sans-serif;
-    margin: 0;
+  background-color: #191919;
 }
+container {
+  display: grid;
+  grid-template-columns: repeat(3, 35%);
+  grid-template-rows: repeat(3, 25%);
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.card {
+  width: 50%;
+  height: 50%;
+  margin: 23%;
+  background-color: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card h1 {
+  text-align: center;
+}
+
