--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 :root {
   --primary-color: #007bff;
-  --secondary-color: #6c757d;
+  --secondary-color: #6e6e6e;
   --success-color: #28a745;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
-  --info-color: #17a2b8;
+  --info-color: #c3c3c3;
+  --dark-mode:#191919
+}
+* {
+  font-family: 'Open Sans', sans-serif;
 }
 body {
-  background-color: #191919;
+  background-color: var(--dark-mode);
+  
 }
 container {
   display: grid;
@@ -22,12 +27,30 @@ container {
   width: 50%;
   height: 50%;
   margin: 23%;
-  background-color: #ccc;
+  background-color: var(--dark-mode);
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 1rem;
+  border: 3px solid var(--secondary-color);
+  cursor: pointer;
+  transition: transform 0.3s ease-out;
+  position: relative;
+  opacity: 0;
+  animation: fade-in 3s ease-out forwards;
+}
+.card:hover {
+  transform: scale(1.03);
 }
 .card h1 {
   text-align: center;
+  color: white;
 }
-
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
