--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 * {
   font-family: 'Open Sans', sans-serif;
+  /* border: 1px solid red; */
 }
 body {
   background-color: var(--dark-mode);
@@ -16,17 +17,18 @@ body {
 }
 container {
   display: grid;
-  grid-template-columns: repeat(3, 35%);
-  grid-template-rows: repeat(3, 25%);
+  grid-template-columns: repeat(3, 25%);
+  grid-template-rows: repeat(3, 35%);
   justify-content: center;
   align-items: center;
-  
+  grid-gap: 50px;
+  margin: 5%;
 }
 
 .card {
-  width: 50%;
-  height: 50%;
-  margin: 23%;
+  width: 100%;
+  height: 100%;
+  min-height: 200px;
   background-color: var(--dark-mode);
   display: flex;
   justify-content: center;
@@ -38,14 +40,20 @@ container {
   position: relative;
   opacity: 0;
   animation: fade-in 3s ease-out forwards;
+ 
 }
+
 .card:hover {
   transform: scale(1.03);
 }
+
 .card h1 {
   text-align: center;
   color: white;
+  padding: 10px; 
+  font-size: 16px; 
 }
+
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -54,3 +62,15 @@ container {
     opacity: 1;
   }
 }
+@media screen and (max-width: 1200px) {
+  container {
+    grid-template-columns: repeat(1, 50%); 
+    grid-template-rows: auto; 
+    grid-gap: 50px; 
+  }
+}
+
+
+
+
+
