--- a/style.css
+++ b/style.css
@@ -42,6 +42,18 @@ container {
   animation: fade-in 3s ease-out forwards;
  
 }
+.card:hover::before {
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -20px;
+  left: 15%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+}
 
 .card:hover {
   transform: scale(1.03);
