--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 :root {
   --primary-color: #007bff;
-  --secondary-color: #6e6e6e;
+  --secondary-color: #585858;
   --success-color: #28a745;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #c3c3c3;
-  --dark-mode:#191919
+  --dark-mode:#09090c;
 }
 * {
-  font-family: 'Open Sans', sans-serif;
+  
+  font-family: 'Roboto Mono', monospace;
   /* border: 1px solid red; */
 }
 body {
@@ -23,18 +24,19 @@ container {
   align-items: center;
   grid-gap: 50px;
   margin: 5%;
+  margin-bottom: 10%;
 }
 
 .card {
   width: 100%;
   height: 100%;
   min-height: 200px;
-  background-color: var(--dark-mode);
+  background-color: #121214;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 1rem;
-  border: 3px solid var(--secondary-color);
+  border: 2px solid var(--secondary-color);
   cursor: pointer;
   transition: transform 0.3s ease-out;
   position: relative;
@@ -63,8 +65,80 @@ container {
   text-align: center;
   color: white;
   padding: 10px; 
-  font-size: 16px; 
+  font-size: 24px; 
 }
+
+footer {
+  height: 100px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-links li {
+  display: inline-block;
+  margin-right: 20px;
+  
+}
+
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-social ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-social li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer-social a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+}
+.footer-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-social img {
+  max-height: 12rem;
+  background-color: var(--secondary-color);
+}
+.footer-social li:nth-child(1) img:hover {
+  background-color: #4064ac;
+}
+
+.footer-social li:nth-child(2) img:hover {
+  background-color: #ed4a55;
+}
+
+.footer-social li:nth-child(3) img:hover {
+  background-color: #eb4988;
+}
+
+.footer-social li:nth-child(4) img:hover {
+  background-color: #1da1f2;
+}
+
+
+
 
 @keyframes fade-in {
   from {
