--- a/style.css
+++ b/style.css
@@ -28,13 +28,11 @@ container {
 }
 
 .card {
+  padding: 1rem;
   width: 100%;
   height: 100%;
   min-height: 200px;
   background-color: #121214;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 1rem;
   border: 2px solid var(--secondary-color);
   cursor: pointer;
@@ -42,8 +40,27 @@ container {
   position: relative;
   opacity: 0;
   animation: fade-in 3s ease-out forwards;
- 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
 }
+.card a {
+  text-decoration: none;
+}
+.card-description {
+  align-items: center;
+  text-align: center;
+}
+.card img {
+  width: 50%;
+  height: 50%;
+  
+}
+.card p {
+  color: white;
+  margin: 1rem;
+}
+
 .card:hover::before {
   content: attr(data-tooltip);
   position: absolute;
