--- a/src/style.css
+++ b/src/style.css
@@ -37,15 +37,23 @@
   font-family: 'Roboto Mono', monospace;
   /* border: 1px solid red; */
 }
-
-
+.underline-word {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.section-header {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  color: white;
+}
 .navbar {
   padding-top: 1%;
   background-color: var(--dark-mode);
   height: 60px;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
@@ -241,12 +249,16 @@
 }
 .about-me img{
 
-  border-radius: 1rem;
+  border-radius: 10px;
+
 }
 .img-border {
+
   padding: 1rem;
   border: 2px solid var(--color-icon);
-  border-radius: 1rem;
+  border-radius: 10px;
+  max-width: fit-content;
+  
 }
 
 body {
@@ -269,7 +281,7 @@ container {
 }
 
 .card {
-  min-width: 50vh;
+  min-width: 38vh;
   width: 100%;
   height: 100%;
   min-height: 200px;
@@ -424,17 +436,30 @@ section {
     grid-template-columns: repeat(1, 50%); 
     grid-template-rows: auto; 
     grid-gap: 50px; 
+  
+  }
+  .about-me {
+    display: grid;
+    grid-template-columns: repeat(1, 85%); 
+    grid-template-rows: auto; 
+    grid-gap: 50px; 
+  }
+  .about-me-content {
+    font-size: 15px;
+  }
+  .img-border {
+    display: block;
+    margin: 0 auto;
   }
 }
-
-
 
 .hidden {
   opacity: 0;
   filter: blur(2px);
   transform: translateY(50%);
-  transition: all 1s;
+  transition: all 1.5s;
 }
+
 @media(prefers-reduced-motion) {
   .hidden {
     transition: none;
