--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   margin: 0;
   padding: 0;  
   font-family: 'Roboto Mono', monospace;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 .underline-word {
   cursor: pointer;
@@ -390,8 +390,8 @@ section {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 6rem;
-  height: 6rem;
+  width: 100%;
+  height: 100%;
   background: #000;
   border-radius: 50%;
   z-index: -1;
@@ -422,6 +422,7 @@ section {
 .icon-item:nth-child(5) a:hover:before { 
   background: var(--social-icon5); 
 }
+
 .email-zone{
   padding: 5%;
   display: flex;
@@ -530,5 +531,63 @@ section {
   margin: 3%;
 }
 
+/* phone */
+@media screen and (max-width: 400px) {
+
+  .navbar{
+    max-width: 100%;
+  }
+  .btn-box{
+    padding: 5px
+  }
+  .nav-item{
+    margin: 0 5px;
+    text-align: left;
+    display: flex;
+    
+  }
+  .nav-item a{
+  
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+  }
+  .animate-bottom {
+    text-align: center;
+  }
+ 
+  .about-me-content {
+    padding: 0;
+    max-height: none;
+  }
+  .about-me p {
+    font-size: 14px;
+    
+  }
+  .card-description p {
+    font-size: 10px;
+  }
+  .email-zone p {
+    max-width: 100%;
+  }
+  .icon-link{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+   
+  }
+  section ul li {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  container {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
 
 
