--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ section {
   border-radius: 8px;
   transition-property: background-color,border-color,color,box-shadow,filter;
   transition-duration: .1s;
-  border: 1px solid transparent;
+  border: 1px solid white;
   letter-spacing: 2px;
   min-width: 160px;
   white-space: normal;
@@ -474,7 +474,6 @@ section {
   text-align: center;
   padding: 16px 14px 18px;
   color: white;
-  box-shadow: inset 0 0 0 1px #616467;
   background-color: transparent;
   height: 48px;
   background-image: linear-gradient(to left, transparent 50%, white 50%);
