--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   
 }
 .dark-mode {
+  transition: all 1s ease;
 	--dark-mode: #b2d3c2;
 	--info-color: #09090c;
 	--card-color: #f5f5f5;
@@ -46,6 +47,7 @@
   padding: 0;  
   font-family: 'Roboto Mono', monospace;
   /* border: 1px solid red; */
+  
 }
 #scroll-to-top-btn {
   position: fixed;
@@ -175,7 +177,6 @@
   background-position: 100% 0;
   background-size: 200% 100%;
 }
-
 .animate-button:hover {
   color: white;
   background-position: 0 0;
@@ -252,7 +253,7 @@
 }
 
 .about-me-content {
-
+  border-radius: 0.5rem;
   max-width: 80vh;
   max-height: 70%;
   padding: 20px;
@@ -271,7 +272,7 @@
 }
 .about-me img{
 
-  box-shadow: rgba(0, 191, 255, 0.4) 5px 5px, rgba(0, 191, 255, 0.3) 10px 10px, rgba(0, 191, 255, 0.2) 15px 15px, rgba(0, 191, 255, 0.1) 20px 20px, rgba(0, 191, 255, 0.05) 25px 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   border-radius: 10px;
 
 }
@@ -454,7 +455,8 @@ section {
   justify-content: center;
   align-items: center;  
   min-height: 80vh;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .email-zone{
   padding: 5%;
