--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@
 
 }
 .about-me {
+  
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -266,6 +267,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   opacity: 0;
   animation: fade-in 3s ease-out forwards;
+  
 }
 .about-me-content p {
   text-align: left;
@@ -294,10 +296,10 @@ body {
 container {
   display: grid;
   grid-template-columns: repeat(3, 29%);
-  grid-template-rows: repeat(3, 30%);
+  grid-template-rows: repeat(3, 29%);
   justify-content: center;
   align-items: center;
-  grid-gap: 8vh;
+  grid-gap: 3vh;
   margin: 10vh;
   margin-bottom: 15vh;
   min-height: 100vh;
@@ -306,17 +308,19 @@ container {
 }
 
 .card {
-  min-width: 38vh;
-  width: 100%;
-  height: 100%;
+ 
+  
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+  min-width: 30vh;
+  width: 90%;
+  height: 70%;
   min-height: 200px;
   background-color: var(--card-color);
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   border: 2px solid var(--secondary-color);
   cursor: pointer;
   transition: transform 0.3s ease-out;
   position: relative;
-
   display: flex; 
   justify-content: center; 
   align-items: center; 
@@ -331,8 +335,8 @@ container {
   display: flex;
 }
 .card img {
-  width: 45%;
-  height: 45%;
+  width: 35%;
+  height: 35%;
   margin: 1rem;
   border-radius: 5%;
 }
@@ -602,10 +606,13 @@ section {
   .about-me-content {
     padding: 0;
     max-height: none;
+ 
   }
   .about-me p {
     font-size: 14px;
-    
+    text-align: center;
+    padding: 1rem;
+   
   }
 
   
@@ -684,3 +691,68 @@ section {
   margin-left: 2px;
 }
 
+/* imported from https://uiverse.io/AqFox/young-dragon-29 */
+
+#website {
+  display: none;
+}
+.spinner {
+  width: 44px;
+  height: 44px;
+  animation: spinner-y0fdc1 2s infinite ease;
+  transform-style: preserve-3d;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ }
+ 
+ .spinner > div {
+  background-color: rgba(0,77,255,0.2);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  border: 2px solid #ffffff;
+ }
+ 
+ .spinner div:nth-of-type(1) {
+  transform: translateZ(-22px) rotateY(180deg);
+ }
+ 
+ .spinner div:nth-of-type(2) {
+  transform: rotateY(-270deg) translateX(50%);
+  transform-origin: top right;
+ }
+ 
+ .spinner div:nth-of-type(3) {
+  transform: rotateY(270deg) translateX(-50%);
+  transform-origin: center left;
+ }
+ 
+ .spinner div:nth-of-type(4) {
+  transform: rotateX(90deg) translateY(-50%);
+  transform-origin: top center;
+ }
+ 
+ .spinner div:nth-of-type(5) {
+  transform: rotateX(-90deg) translateY(50%);
+  transform-origin: bottom center;
+ }
+ 
+ .spinner div:nth-of-type(6) {
+  transform: translateZ(22px);
+ }
+ 
+ @keyframes spinner-y0fdc1 {
+  0% {
+   transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+  }
+ 
+  50% {
+   transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
+  }
+ 
+  100% {
+   transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+  }
+ }
