--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@
   font-weight: 700;
   text-align: center;
   padding: 16px 14px 18px;
-  color: var(--project-button);
+  color: var(--highlight-word);
   box-shadow: inset 0 0 0 2px var(--project-button);
   background-color: transparent;
   height: 48px;
@@ -530,7 +530,7 @@ section {
   letter-spacing: 2px;
   min-width: 160px;
   white-space: normal;
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
   padding: 16px 14px 18px;
   color: var(--info-color);
