--- a/style.css
+++ b/style.css
@@ -2,19 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 :root {
-  --primary-color: #007bff;
-  --secondary-color: #585858;
-  --gray-description-color: #c3c3c3;
-  --highlight-word:#ADD8E6;
-  --card-color: #121214;
-  --warning-color: #ffc107;
-  --info-color: #f1f1f1;
-  --dark-mode:#121214;
-  --dark-mode-second:#0c161cc4;
-  --project-button:#616467;
-  --technologies: #41414371;
-  --border-line: #aed7df;
-
+  --primary-color: #585858;
   --bg: #dcdcdc;     
   --color-icon: #535c68;  
   --social-icon1: #0078d7;
@@ -22,6 +10,16 @@
   --social-icon3: #0e141e;
   --social-icon4: #000000;
   --social-icon5: #0077B5;  
+ 
+  --dark-mode:#121214;
+  --dark-mode-second:#0c161cc4;
+  --info-color: #f1f1f1;
+  --card-color: #121214;
+  --gray-description-color: #c3c3c3;
+  --highlight-word:#ADD8E6;
+  --project-button:#616467;
+  --technologies: #41414371;
+  --border-line: #aed7df;
 
 }
 .dark-mode {
@@ -37,6 +35,8 @@
   --border-line: #09181b;
   
 }
+
+
 ::-webkit-scrollbar {
   width: 6px;
 }
@@ -352,7 +352,7 @@ container {
   min-height: 200px;
   background-color: var(--card-color);
   border-radius: 1.5rem;
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--primary-color);
   cursor: pointer;
   transition: transform 0.3s ease-out;
   position: relative;
