--- a/style.css
+++ b/style.css
@@ -12,28 +12,29 @@
   --social-icon5: #0077B5;  
  
   --dark-mode:#121214;
-  --dark-mode-second:#0c161cc4;
-  --info-color: #f1f1f1;
+  --dark-mode-second:#1e1e20;
+  --info-color: #dfdfd7;
   --card-color: #121214;
   --gray-description-color: #c3c3c3;
   --highlight-word:#ADD8E6;
   --project-button:#616467;
   --technologies: #41414371;
   --border-line: #aed7df;
-
+  --main-gradient: linear-gradient(to bottom, #cfeeee, #FFFFFF, #38add4);
 }
 .dark-mode {
   transition: all 1s ease;
-	--dark-mode: #fbf4e9;
-  --dark-mode-second:#e2dcd2;
-	--info-color: #09090c;
+	--dark-mode: #dfdfd7;
+  --dark-mode-second:#ece4d7;
+	--info-color: #1e1e20;
 	--card-color: #f5f5f5;
   --gray-description-color: rgb(85, 85, 85);
   --highlight-word: #315a39;
   --project-button: #09090c69;
   --technologies: #ffffff88;
   --border-line: #09181b;
-  
+  --main-gradient: linear-gradient(to bottom, #4caf50, #68a875, #315a39);
+   
 }
 
 
@@ -56,6 +57,28 @@
   /* border: 1px solid red; */
   
 }
+.letter-d {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  background: none;
+
+  text-align: center;
+  font-size: 72px;
+  font-weight: bold;
+  
+  background-image: var(--main-gradient);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+ 
+}
+
+.letter-d span {
+  display: inline-block;
+  margin-top: 20%;
+  color: transparent;
+}
 #scroll-to-top-btn {
   position: fixed;
   bottom: 20px;
@@ -73,6 +96,84 @@
   display: flex;
   color: var(--info-color);
 }
+
+.switch {
+  
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.toggle-switch{
+  
+  border-left: 1px solid var(--gray-description-color);
+  padding-left: 10px;
+  border-right: 1px solid var(--gray-description-color);
+  padding-right: 10px;
+}
+.slider {
+  border: 1px solid var(--info-color);
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--dark-mode-second);
+  transition: .4s;
+  border-radius: 30px;
+}
+
+.slider:before {
+ 
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 20px;
+  left: 0.3em;
+  bottom: 0.3em;
+  background-color: rgb(219, 198, 2);
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--dark-mode-second);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--dark-mode-second);
+}
+
+input:checked + .slider:before {
+  transform: translateX(1.5em);
+}
+
+.slider::after {
+  width: 20px;
+  height: 20px;
+  left: 20%;
+  top: 10%;
+  border-radius: 50%;
+  position: absolute;
+  content: "";
+  background-color: var(--dark-mode-second);
+  transition: ease 0.4s;
+}
+
+input:checked + .slider::after {
+  left: 80%;
+  width: 0px;
+  height: 0px;
+}
+
 .navbar {
   padding-top: 1%;
   background-color: var(--dark-mode);
@@ -188,11 +289,6 @@
   transition: background-position 0.4s ease;
 }
 
-
-
-
-
-
 @keyframes animatebottom {
   from {
     bottom: -50px;
@@ -206,6 +302,7 @@
 
 h1 {
   font-family: 'Merriweather', serif;
+  color:var(--info-color)
 }
 .intro {
   display: flex;
@@ -338,7 +435,7 @@ container {
   min-height: 200px;
   background-color: var(--card-color);
   border-radius: 1.5rem;
-  border: 2px solid var(--primary-color);
+  /* border: 2px solid var(--primary-color); */
   cursor: pointer;
   transition: transform 0.3s ease-out;
   position: relative;
@@ -600,7 +697,9 @@ section {
 
 /* phone */
 @media screen and (max-width: 500px) {
-
+  .letter-d span {
+    font-size: 48px;
+  }
   .navbar{
     max-width: 100%;
   }
