--- a/style.css
+++ b/style.css
@@ -408,7 +408,6 @@ h1 {
 body {
   background-color: var(--dark-mode);
   transition: all 0.3s ease;
-  
 
 }
 
@@ -770,7 +769,7 @@ section {
     display: flex;
     flex-direction: column;
     transition: all 0.3s ease-in-out;
-    transform: translateY(-190px);
+    transform: translateY(-100%);
   }
 
   .nav-list-hidden {
@@ -912,10 +911,10 @@ section {
 
 /* imported from https://uiverse.io/AqFox/young-dragon-29 */
 
-#website {
+/* #website {
   display: none;
-}
-.spinner {
+} */
+/* .spinner {
   width: 44px;
   height: 44px;
   animation: spinner-y0fdc1 2s infinite ease;
@@ -960,7 +959,7 @@ section {
  
  .spinner div:nth-of-type(6) {
   transform: translateZ(22px);
- }
+ } */
  
  @keyframes spinner-y0fdc1 {
   0% {
