--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 .dark-mode {
   transition: all 1s ease;
-	--dark-mode: #dfdfd7;
+	--dark-mode: #edeee2;
   --dark-mode-second:#ece4d7;
 	--info-color: #1e1e20;
 	--card-color: #f5f5f5;
