--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  
   --dark-mode:#121214;
   --dark-mode-second:#1e1e20;
-  --info-color: #dfdfd7;
+  --info-color: #edeee2;
   --card-color: #121214;
   --gray-description-color: #c3c3c3;
   --highlight-word:#ADD8E6;
